psterile247-7964075.err
Info in <TUnixSystem::ACLiC>: creating shared library /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C.so
sh: /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C.d: Permission denied
Warning in <ACLiC>: Failed to generate the dependency file for /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C.so
In file included from /tmp/rootcint_CkHWpY.h:4:0,
                 from /tmp/WDS0WB_cint.cxx:1:
/home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_linkdef.h:3:0: error: unterminated #ifdef
 #ifdef __CINT__
 ^
Error: external preprocessing failed. :0:
!!!Removing /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_dict.cxx /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_dict.h !!!
Error: /project/6004969/software.2/ratcage/root-5.34.36/bin/rootcint: error loading headers...
Error in <ACLiC>: Dictionary generation failed!
Info in <ACLiC>: Invoking compiler to check macro's validity
/home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6.C: In function ‘void PoissonData(std::vector<TH1F*>&, TH1F*&)’:
/home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6.C:182:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int ihist=0;ihist<histo.size();ihist++){
                                     ^
/home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6.C: In function ‘void LikelihoodSterile_modified6(int)’:
/home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6.C:415:36: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i=0;i<spec_fermi.size()-1;i++){
                                    ^
Info in <ACLiC>: The compiler has not found any problem with your macro.
	Probably your macro uses something rootcint can't parse.
	Check http://root.cern.ch/viewvc/branches/v5-34-00-patches/cint/doc/limitati.txt for Cint's limitations.
Error: Function LikelihoodSterile_modified6(247) is not defined in current scope  :0:
*** Interpreter error recovered ***
